--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -23,9 +23,9 @@
     <b-tabs v-model="selected">
       <b-tab-item label="CoNLL-U Plus">
         <p>
-          {% trans "He is an extenshion of format CoNLL-U. The one may to have any count the columns." %}
+          {% trans "It's an extension of CoNLL-U. File can have any non-zero number of columns." %}
           <a href="https://universaldependencies.org/ext-format.html">{% trans "Format." %}</a>
-          {% trans "He should be in the coding UTF8." %}
+          {% trans "Must be in coding UTF-8." %}
         </p>
       </b-tab-item>
       <b-tab-item label='{% trans "Other format" %}'>
