--- a/source/server/templates/registration/logged_out.html
+++ b/source/server/templates/registration/logged_out.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="column">
-  	<p class="title is-3 is-spaced has-text-centered">{% trans "Выполнен выход" %}</p>
-  	<p class="subtitle is-5 has-text-centered"><a href="{% url 'login'%}">{% trans "Нажмите, чтобы авторизоваться" %}</a></p>
+  	<p class="title is-3 is-spaced has-text-centered">{% trans "Signed" %}</p>
+  	<p class="subtitle is-5 has-text-centered"><a href="{% url 'login'%}">{% trans "Click to authorization" %}</a></p>
   </div>
 {% endblock %}
