--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -75,7 +75,7 @@
         <br>
         <div class="field is-grouped">
           <p class="control">
-            <button class="button is-success is-inverted is-outlined is-small" @click="deleteDoc(doc.id)">{% trans "Yes" %}</button>
+            <button class="button is-success is-inverted is-outlined is-small" @click="deleteDoc(doc.id, index)">{% trans "Yes" %}</button>
           </p>
           <p class="control">
             <button class="button is-danger is-inverted is-outlined is-small" @click="closeDelete()">{% trans "No" %}</button>
