--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -18,14 +18,21 @@
   </b-notification>
   <h4 class="title is-spaced is-4">{% trans "Annotation" %}</h4>
   <h6 class="subtitle is-6">{% trans "File name" %}: ${doc.file_name}</h6>
-  <div class="field">
-    <b-switch 
-    type="is-success"
-    v-model="is_approved"
-    @input="onChangeApproved()">
-    <span v-if="is_approved">{% trans "Verified" %}</span>
-    <span v-if="!is_approved">{% trans "Not verified" %}</span>
-    </b-switch>
+  <div class="columns is-vcentered">
+    <div class="column is-2">
+      <div class="field">
+        <b-switch 
+        type="is-success"
+        v-model="is_approved"
+        @input="onChangeApproved()">
+          <span v-if="is_approved">{% trans "Verified" %}</span>
+          <span v-if="!is_approved">{% trans "Not verified" %}</span>
+        </b-switch>
+      </div>
+    </div>
+    <div class="column is-2">
+      <b-button type="is-danger" outlined @click="resetLabels()">{% trans "Reset labels" %}</b-button>
+    </div>
   </div>
   <div class="card">
     <header class="card-header">
