--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -30,8 +30,8 @@
         </b-switch>
       </div>
     </div>
-    <div class="column is-2">
-      <b-button type="is-danger" outlined @click="resetLabels()">{% trans "Reset labels" %}</b-button>
+    <div class="column is-2 is-offset-8">
+      <b-button class="is-pulled-right" type="is-danger" outlined @click="resetLabels()">{% trans "Reset labels" %}</b-button>
     </div>
   </div>
   <div class="card">
