--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -10,7 +10,7 @@
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-  <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/flatly/bulmaswatch.min.css">
+  <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
 
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/awfont.min.css' %}">
