Fix buefy to 0.8.2

--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -21,8 +21,7 @@
     <script src="{% static 'js/ex/vue.min.js' %}"></script>
   {% endif %}
 
-  <!-- <script src="{% static 'js/ex/buefy.min.js' %}"></script> -->
-  <script src="https://unpkg.com/buefy@0.8.20/dist/buefy.min.js"></script>
+  <script src="{% static 'js/ex/buefy.min.js' %}"></script>
   <script src="{% static 'js/ex/axios.min.js' %}"></script>
   <script src="{% static 'js/ex/vue-router.min.js' %}"></script>
   <script src="{% static 'js/ex/vue-cookies.min.js' %}"></script>
