--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -8,18 +8,34 @@
 {% block project-content %}
 
 <div id="project-export">
-  <b-notification
-  :type="st_variant"
-  aria-close-label="Close notification"
-  role="alert"
-  :active.sync="st_show"
-  v-show="st_show">
-  ${ st_value }
+    <b-notification
+    :type="st_variant"
+    aria-close-label="Close notification"
+    role="alert"
+    :active.sync="st_show"
+    v-show="st_show">
+    ${ st_value }
   </b-notification>
+  
   <div class="column">
     <h5 class="title is-5">{% trans "Select the type of file for download" %}</h5>
   </div>
+
   <div class="column">
+    <b-tabs v-model="selected">
+      {% for format, format_label, description, example in format_docs %}
+        <b-tab-item label="{{ format_label }}" value="{{ format }}">
+          <p>{{ description |safe }}</p>
+          {% if example %}
+            <p>{% trans "Example:" %}</p>
+            <pre class="has-background-dark has-text-white">{{ example }}</pre>
+          {% endif %}
+        </b-tab-item>
+      {% endfor %}
+    </b-tabs>
+  </div>
+
+  <!-- <div class="column">
     <b-tabs v-model="selected">
       <b-tab-item label="CoNLL-U Plus">
         <p>
@@ -37,15 +53,15 @@
         </p>
       </b-tab-item>
     </b-tabs>
-  </div>
-    <div class="column">
-          <button 
-          class="button is-link"
-          v-bind:class="{ 'is-loading': is_process }"
-          @click="download({{project.id}})">
-          {% trans "Download" %}
-        </button>
-    </div>
+  </div> -->
+
+  <div class="column">
+        <button 
+        class="button is-link"
+        v-bind:class="{ 'is-loading': is_process }"
+        @click="download({{project.id}})">
+        {% trans "Download" %}
+      </button>
   </div>
 </div>
 
