Zip description on e/i page

--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -35,25 +35,9 @@
     </b-tabs>
   </div>
 
-  <!-- <div class="column">
-    <b-tabs v-model="selected">
-      <b-tab-item label="CoNLL-U Plus">
-        <p>
-          {% trans "It's an extension of CoNLL-U. File can have any non-zero number of columns." %}
-          <a href="https://universaldependencies.org/ext-format.html">{% trans "Format." %}</a>
-          {% trans "Must be in coding UTF-8." %}
-        </p>
-      </b-tab-item>
-      <b-tab-item label='{% trans "Other format" %}'>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
-          architecto eum temporibus voluptate molestiae iusto ipsam,
-          quisquam rem hic mollitia earum.
-        </p>
-      </b-tab-item>
-    </b-tabs>
-  </div> -->
+  <div class="column">
+    {% trans "Will downloaded as zip archive, what contained file in selected format." %}
+  </div>
 
   <div class="column">
         <button 
