--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -34,6 +34,10 @@
       {% endfor %}
     </b-tabs>
   </div>
+
+  <div class="column">
+    {% trans "Supported to upload file as archivs: zip." %}
+  </div>
     
   <div class="column">
     <b-field grouped>
