add/remove doc labels

--- a/source/server/annotation/templates/project_dc_annotation.html
+++ b/source/server/annotation/templates/project_dc_annotation.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <hr>
+      <hr class="my-3">
       <div class="tl_anno_row" v-for="data in doc_data">
           ${data.text}
       </div>
