--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="column">
-    {% trans "Will downloaded as zip archive, what contained file in selected format." %}
+    {% trans "Download zip archive, which contains files in select format." %}
   </div>
 
   <div class="column">
