--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="column">
-    {% trans "Supported to upload file as archivs: zip." %}
+    {% trans "Supports to upload file as archivs: zip." %}
   </div>
     
   <div class="column">
